--- a/application/main/templates_main/layout_main.html
+++ b/application/main/templates_main/layout_main.html
@@ -33,6 +33,7 @@
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
               <a class="dropdown-item" href="{{ url_for('view.index_view')}}">Flask math</a>
+              <a class="dropdown-item" href="{{ url_for('cpu.index')}}">Flask CPU</a>
             </div>
           </li>
         </ul>
