--- a/application/main/templates_main/index_main.html
+++ b/application/main/templates_main/index_main.html
@@ -7,7 +7,9 @@
     <div class="card-header">
       <b><a href='{{url_for("view.index_view")}}' class="heading">Flask Math</a></b>
     </div>
-    <img src="static_main/images/tenkey.png" alt="CPU" width="150" height="100">
+    <a href='{{url_for("view.index_view")}}'>
+      <img src="static_main/images/tenkey.png" alt="CPU" width="150" height="100">
+    </a>
     <div class="card-body text-success">
       <p class="card-text">Flask Math is a web site that can perform various calculations such as calculus and matrix.</p>
     </div>
@@ -19,9 +21,11 @@
     <div class="card-header">
       <b><a href='{{url_for("cpu.index")}}' class="heading">Flask CPU</a></b>
     </div>
-    <img src="static_main/images/CPU.png" alt="CPU" width="150" height="100">
+    <a href='{{url_for("cpu.index")}}' class="heading">
+      <img src="static_main/images/CPU.png" alt="CPU" width="150" height="100">
+    </a>
     <div class="card-body text-success">
-      <p class="card-text">Flask CPU is a site where you can get various values of CPU.</p>
+      <p class="card-text">Flask CPU is a web site where you can get various values of CPU.</p>
     </div>
   </div> 
 </div> 
