--- a/application/main/templates_main/index_main.html
+++ b/application/main/templates_main/index_main.html
@@ -5,9 +5,9 @@
 <div class="card-deck">
   <div class="card text-center border-success">
     <div class="card-header">
-      <b><a href='{{url_for("view.index_view")}}' class="heading">Flask Math</a></b>
+      <b><a href='{{url_for("Math.index_view")}}' class="heading">Flask Math</a></b>
     </div>
-    <a href='{{url_for("view.index_view")}}'>
+    <a href='{{url_for("Math.index_view")}}'>
       <img src="static_main/images/tenkey.png" alt="CPU" width="150" height="100">
     </a>
     <div class="card-body text-success">
@@ -21,11 +21,7 @@
     <div class="card-header">
       <b><a href='{{url_for("cpu.index")}}' class="heading">Flask CPU</a></b>
     </div>
-<<<<<<< HEAD
-    <a href='{{url_for("cpu.index")}}' class="heading">
-=======
     <a href='{{url_for("cpu.index")}}'>
->>>>>>> 3ea3a4b1d79d19a6bd71c87963d8e50069951148
       <img src="static_main/images/CPU.png" alt="CPU" width="150" height="100">
     </a>
     <div class="card-body text-success">
