--- a/application/flask_CPU/templates_cpu/measure.html
+++ b/application/flask_CPU/templates_cpu/measure.html
@@ -71,7 +71,7 @@
 </div>
 
 <div>
-  <img src="{{url_for('cpu.graph',graph_type=graph_type)}}"></img>
+  <img src="{{url_for('cpu.graph',graph_type=graph_type)}}" class="graph"></img>
 </div>
 
 {% endblock %}
