--- a/application/flask_CPU/templates_cpu/layout_cpu.html
+++ b/application/flask_CPU/templates_cpu/layout_cpu.html
@@ -35,6 +35,7 @@
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
               <a class="dropdown-item" href="{{ url_for('cpu.index')}}">index</a>
               <a class="dropdown-item" href="{{ url_for('cpu.measure',graph_type='temp')}}">CPU</a>
+              <a class="dropdown-item" href="{{ url_for('cpu.weather')}}">weather</a>
             </div>
           </li>
         </ul>
