--- a/application/flask_CPU/templates_cpu/index_cpu.html
+++ b/application/flask_CPU/templates_cpu/index_cpu.html
@@ -6,7 +6,7 @@
   <a class="list-group-item list-group-item-action" href="{{url_for('cpu.measure',graph_type='temp')}}">CPU</a>
 </div>
 <div class="list-group">
-  <a class="list-group-item list-group-item-action" href="{{url_for('cpu.weather')}}">weather</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('cpu.weather_view')}}">weather</a>
 </div>
 <br><br>
 
