--- a/application/flask_CPU/templates_cpu/layout_cpu.html
+++ b/application/flask_CPU/templates_cpu/layout_cpu.html
@@ -37,6 +37,7 @@
               <a class="dropdown-item" href="{{ url_for('cpu.index')}}">index</a>
               <a class="dropdown-item" href="{{ url_for('cpu.measure',graph_type='temp')}}">CPU</a>
               <a class="dropdown-item" href="{{ url_for('cpu.weather_view')}}">weather</a>
+              <a class="dropdown-item" href="{{ url_for('cpu.ip_address_view')}}">ip_address</a>
             </div>
           </li>
         </ul>
