--- a/application/flask_CPU/templates_cpu/index_cpu.html
+++ b/application/flask_CPU/templates_cpu/index_cpu.html
@@ -8,6 +8,9 @@
 <div class="list-group">
   <a class="list-group-item list-group-item-action" href="{{url_for('cpu.weather_view')}}">weather</a>
 </div>
+<div class="list-group">
+  <a class="list-group-item list-group-item-action" href="{{url_for('cpu.ip_address_view')}}">ip_address</a>
+</div>
 <br><br>
 
 <nav aria-label="Page navigation">
