--- a/application/flask_CPU/templates_cpu/ip_address.html
+++ b/application/flask_CPU/templates_cpu/ip_address.html
@@ -5,9 +5,20 @@
 {% endblock %}
 
 {% block BODY %}
+<p id="RealtimeClock" class="left"></p>
+<script src="static_cpu/js/RealTimeClock.js"></script>
+<br><br>
 
-{% for data in Data %}
-<h3>{{data}}</h3>
-{% endfor %}
+<!-- {% for data in Data %}
+<h6>{{data}}</h6>
+{% endfor %} -->
+
+{% if Data[5]=="country: JP" %}
+<h5>最寄り駅</h5>
+<script language="javascript" charset="UTF-8" type="text/javascript" 
+src="http://map.simpleapi.net/stationapi?x={{Data[14]}}&y={{Data[13]}}&output=javascript"></script>
+<br><br>
+<img src="http://map.simpleapi.net/stationmap?x={{Data[14]}}&y={{Data[13]}}"></img>
+{% endif %}
 
 {% endblock %}
