--- a/application/flask_CPU/templates_cpu/ip_address.html
+++ b/application/flask_CPU/templates_cpu/ip_address.html
@@ -4,21 +4,30 @@
 
 {% endblock %}
 
+
 {% block BODY %}
 <p id="RealtimeClock" class="left"></p>
 <script src="static_cpu/js/RealTimeClock.js"></script>
 <br><br>
 
-<!-- {% for data in Data %}
-<h6>{{data}}</h6>
-{% endfor %} -->
-
-{% if Data[5]=="country: JP" %}
-<h5>最寄り駅</h5>
-<script language="javascript" charset="UTF-8" type="text/javascript" 
-src="http://map.simpleapi.net/stationapi?x={{Data[14]}}&y={{Data[13]}}&output=javascript"></script>
+<h3>IPアドレス({{Data[1]}}):{{Data[0]}}</h3>
 <br><br>
-<img src="http://map.simpleapi.net/stationmap?x={{Data[14]}}&y={{Data[13]}}"></img>
+
+<div style="display: inline-block; width: 50%;">
+{% if Data[5]=="JP" %}
+    <br>
+    <h5>現在地</h5>
+    {{Data[3]}},{{Data[5]}}
+    <h5>緯度{{Data[13]}}度　経度{{Data[14]}}度</h5>
+    <br>
+    <h5>最寄り駅</h5>
+    <script language="javascript" charset="UTF-8" type="text/javascript"
+        src="http://map.simpleapi.net/stationapi?x={{Data[14]}}&y={{Data[13]}}&output=javascript"></script>
 {% endif %}
+</div>
+
+<div style="display: inline-block; float:right; width: 50%;">
+    <iframe src="https://maps.google.co.jp/maps?output=embed&q={{Data[13]}},{{Data[14]}}" width="100%" height="500"></iframe>
+</div>
 
 {% endblock %}
