--- a/application/main/templates_main/index_main.html
+++ b/application/main/templates_main/index_main.html
@@ -19,9 +19,9 @@
 
   <div class="card text-center border-success">
     <div class="card-header">
-      <b><a href='{{url_for("cpu.index")}}' class="heading">Flask CPU</a></b>
+      <b><a href='{{url_for("cpu.index_view")}}' class="heading">Flask CPU</a></b>
     </div>
-    <a href='{{url_for("cpu.index")}}'>
+    <a href='{{url_for("cpu.index_view")}}'>
       <img src="static_main/images/CPU.png" alt="CPU" width="150" height="100">
     </a>
     <div class="card-body text-success">
