--- a/application/flask_CPU/templates_cpu/ip_address.html
+++ b/application/flask_CPU/templates_cpu/ip_address.html
@@ -2,10 +2,22 @@
 
 {% block SCRIPT %}
 
+{% if init_flag==1 %}
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script type="text/javascript">
+  $.getJSON("https://api64.ipify.org/?format=json", function (data) {
+    location.href = "{{url_for('cpu.ip_address_view')}}" + "?ip_address=" + data.ip;
+  });
+</script>
+{% endif %}
+
 {% endblock %}
 
 
+
 {% block BODY %}
+
+{% if Data[0]!="ERROR" %}
 <p id="RealtimeClock" class="left"></p>
 <script src="static_cpu/js/RealTimeClock.js"></script>
 <br><br>
@@ -14,20 +26,42 @@
 <br><br>
 
 <div style="display: inline-block; width: 50%;">
-{% if Data[5]=="JP" %}
-    <br>
-    <h5>現在地</h5>
-    {{Data[3]}},{{Data[5]}}
-    <h5>緯度{{Data[13]}}度　経度{{Data[14]}}度</h5>
-    <br>
-    <h5>最寄り駅</h5>
-    <script language="javascript" charset="UTF-8" type="text/javascript"
-        src="http://map.simpleapi.net/stationapi?x={{Data[14]}}&y={{Data[13]}}&output=javascript"></script>
-{% endif %}
+  {% if Data[5]=="JP" %}
+  <br>
+  <h5>現在地</h5>
+  {{Data[3]}},{{Data[5]}}
+  <p>緯度{{Data[13]}}度　経度{{Data[14]}}度</p>
+  <br>
+  <h5>最寄り駅</h5>
+
+  {% for st_data in st_Data %}
+  <p><strong>{{st_data[0]}}</strong></p>
+  <p>路線:{{st_data[1]}} 距離:{{st_data[2]}}({{st_data[3]}})</p>
+  {% endfor %}
+
+  {% endif %}
 </div>
 
 <div style="display: inline-block; float:right; width: 50%;">
-    <iframe src="https://maps.google.co.jp/maps?output=embed&q={{Data[13]}},{{Data[14]}}" width="100%" height="500"></iframe>
+  <iframe src="https://maps.google.co.jp/maps?output=embed&q={{Data[13]}},{{Data[14]}}" width="100%" height="500"></iframe>
+</div>
+{% else %}
+<h5>{{Data[0]}}</h5>
+<h5>{{Data[1]}}</h5>
+<h5>{{Data[2]}}</h5>
+{% endif %}
+
+<div style="clear:both;">
+  <br><br><hr>
+  <a href="http://map.simpleapi.net/" class="heading" target="_blank">
+    <p>Supported By SimpleAPI「最寄り駅Webサービス」</p>
+  </a>
+  <a href="https://www.ipify.org/" class="heading" target="_blank">
+    <p>Supported By ipify API</p>
+  </a>
+  <a href="https://ipapi.co/" class="heading" target="_blank">
+    <p>Supported By ipapi</p>
+  </a>
 </div>
 
 {% endblock %}
