--- a/application/flask_CPU/templates_cpu/layout_cpu.html
+++ b/application/flask_CPU/templates_cpu/layout_cpu.html
@@ -22,7 +22,7 @@
   <div class="container">
     <!-- ナビゲーションバー -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-      <a class="navbar-brand" href="{{url_for('cpu.index')}}">Flask CPU</a>
+      <a class="navbar-brand" href="{{url_for('cpu.index_view')}}">Flask CPU</a>
       <div class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
           <li class="nav-item">
@@ -34,10 +34,10 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
-              <a class="dropdown-item" href="{{ url_for('cpu.index')}}">index</a>
-              <a class="dropdown-item" href="{{ url_for('cpu.measure',graph_type='temp')}}">CPU</a>
+              <a class="dropdown-item" href="{{ url_for('cpu.index_view')}}">index</a>
+              <a class="dropdown-item" href="{{ url_for('cpu.measure_view',graph_type='temp')}}">CPU</a>
               <a class="dropdown-item" href="{{ url_for('cpu.weather_view')}}">weather</a>
-              <a class="dropdown-item" href="{{ url_for('cpu.ip_address_view')}}">ip_address</a>
+              <a class="dropdown-item" href="{{ url_for('cpu.ip_address_view')}}">IP address</a>
             </div>
           </li>
         </ul>
