--- a/application/main/templates_main/layout_main.html
+++ b/application/main/templates_main/layout_main.html
@@ -35,7 +35,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
               <a class="dropdown-item" href="{{ url_for('Math.index_view')}}">Flask math</a>
-              <a class="dropdown-item" href="{{ url_for('cpu.index')}}">Flask CPU</a>
+              <a class="dropdown-item" href="{{ url_for('cpu.index_view')}}">Flask CPU</a>
             </div>
           </li>
         </ul>
