--- a/application/main/templates_main/index_main.html
+++ b/application/main/templates_main/index_main.html
@@ -28,6 +28,19 @@
       <p class="card-text">Flask CPU is a web site where you can get various values of CPU.</p>
     </div>
   </div>
+
+  <div class="card text-center border-success">
+    <div class="card-header">
+      <b><a href='{{url_for("temp.index_view")}}' class="heading">Flask Arduino</a></b>
+    </div>
+    <a href='{{url_for("temp.index_view")}}'>
+      <img src="static_main/images/CPU.png" alt="CPU" width="150" height="100">
+    </a>
+    <div class="card-body text-success">
+      <p class="card-text">Flask Arduino is a web site where you can get various values from Arduino.</p>
+    </div>
+  </div>
+
 </div>
 
 {% endblock %}
