--- a/application/flask_temperature/templates_temp/layout_temp.html
+++ b/application/flask_temperature/templates_temp/layout_temp.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=1024">
-  <title>Flask Temp</title>
+  <title>Flask Arduino</title>
   <!-- bootstrapのインポート -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
@@ -22,7 +22,7 @@
   <div class="container">
     <!-- ナビゲーションバー -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-      <a class="navbar-brand" href="{{url_for('temp.index_view')}}">Flask Temp</a>
+      <a class="navbar-brand" href="{{url_for('temp.index_view')}}">Flask Arduino</a>
       <div class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
           <li class="nav-item">
