--- a/application/main/templates_main/index_main.html
+++ b/application/main/templates_main/index_main.html
@@ -34,7 +34,7 @@
       <b><a href='{{url_for("temp.index_view")}}' class="heading">Flask Arduino</a></b>
     </div>
     <a href='{{url_for("temp.index_view")}}'>
-      <img src="static_main/images/CPU.png" alt="CPU" width="150" height="100">
+      <img src="static_main/images/arduino-icon.png" alt="CPU" width="150" height="100">
     </a>
     <div class="card-body text-success">
       <p class="card-text">Flask Arduino is a web site where you can get various values from Arduino.</p>
