--- a/application/flask_temperature/templates_temp/layout_temp.html
+++ b/application/flask_temperature/templates_temp/layout_temp.html
@@ -34,7 +34,8 @@
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
-              <a class="dropdown-item" href="{{ url_for('temp.index_view')}}">temp</a>
+              <a class="dropdown-item" href="{{ url_for('temp.index_view')}}">index</a>
+              <a class="dropdown-item" href="{{ url_for('temp.measure_view')}}">temp</a>
             </div>
           </li>
         </ul>
