--- a/application/flask_arduino/templates_arduino/measure_temp.html
+++ b/application/flask_arduino/templates_arduino/measure_temp.html
@@ -1,9 +1,9 @@
-{% extends "layout_temp.html" %}
+{% extends "layout_arduino.html" %}
 
 {% block SCRIPT %}
 <script type="text/javascript">
   function jumpPage() {
-    location.href = "{{url_for('temp.measure_view')}}";
+    location.href = "{{url_for('arduino.measure_view')}}";
   }
   setTimeout("jumpPage()",2000)
 </script>
@@ -14,6 +14,6 @@
 <h3>temperature: {{temperature}}℃　humidity: {{humidity}}%</h3>
 
 <div>
-  <img src="{{url_for('temp.graph_temp_view')}}" alt="graph" class="graph">
+  <img src="{{url_for('arduino.graph_temp_view')}}" alt="graph" class="graph">
 </div>
 {% endblock %}
