--- a/application/main/templates_main/index_main.html
+++ b/application/main/templates_main/index_main.html
@@ -31,9 +31,9 @@
 
   <div class="card text-center border-success">
     <div class="card-header">
-      <b><a href='{{url_for("temp.index_view")}}' class="heading">Flask Arduino</a></b>
+      <b><a href='{{url_for("arduino.index_view")}}' class="heading">Flask Arduino</a></b>
     </div>
-    <a href='{{url_for("temp.index_view")}}'>
+    <a href='{{url_for("arduino.index_view")}}'>
       <img src="static_main/images/arduino-icon.png" alt="CPU" width="150" height="100">
     </a>
     <div class="card-body text-success">
