--- a/application/main/templates_main/layout_main.html
+++ b/application/main/templates_main/layout_main.html
@@ -36,6 +36,7 @@
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
               <a class="dropdown-item" href="{{ url_for('Math.index_view')}}">Flask math</a>
               <a class="dropdown-item" href="{{ url_for('cpu.index_view')}}">Flask CPU</a>
+              <a class="dropdown-item" href="{{ url_for('arduino.index_view')}}">Flask Arduino</a>
             </div>
           </li>
         </ul>
