--- a/application/flask_arduino/templates_arduino/index_arduino.html
+++ b/application/flask_arduino/templates_arduino/index_arduino.html
@@ -1,9 +1,9 @@
-{% extends "layout_temp.html" %}
+{% extends "layout_arduino.html" %}
 
 {% block BODY %}
 <br><br>
 <div class="list-group">
-  <a class="list-group-item list-group-item-action" href="{{url_for('temp.measure_view')}}">temp</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('arduino.measure_view')}}">temp</a>
 </div>
 <br><br>
 
@@ -13,7 +13,7 @@
       <a class="page-link" href="#">Previous</a>
     </li>
     <li class="page-item">
-      <a class="page-link" href="{{url_for('temp.index_view')}}">1</a>
+      <a class="page-link" href="{{url_for('arduino.index_view')}}">1</a>
     </li>
     <li class="page-item disabled">
       <a class="page-link" href="#">　Next　</a>
