--- a/application/flask_arduino/templates_arduino/layout_arduino.html
+++ b/application/flask_arduino/templates_arduino/layout_arduino.html
@@ -12,7 +12,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
   <!-- スタイルシート -->
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/earlyaccess/mplus1p.css">
-  <link rel=stylesheet href="static_temp/css/style.css">
+  <link rel=stylesheet href="static_arduino/css/style.css">
   {% block SCRIPT %}
 
   {% endblock %}
@@ -22,20 +22,20 @@
   <div class="container">
     <!-- ナビゲーションバー -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-      <a class="navbar-brand" href="{{url_for('temp.index_view')}}">Flask Arduino</a>
+      <a class="navbar-brand" href="{{url_for('arduino.index_view')}}">Flask Arduino</a>
       <div class="collapse navbar-collapse justify-content-end">
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link" href="https://github.com/kouki-0926" target="_blank">
-              <img src="static_temp/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
+              <img src="static_arduino/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
             </a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
-              <a class="dropdown-item" href="{{ url_for('temp.index_view')}}">index</a>
-              <a class="dropdown-item" href="{{ url_for('temp.measure_view')}}">temp</a>
+              <a class="dropdown-item" href="{{ url_for('arduino.index_view')}}">index</a>
+              <a class="dropdown-item" href="{{ url_for('arduino.measure_view')}}">temp</a>
             </div>
           </li>
         </ul>
