--- a/application/flask_CPU/templates_cpu/index_cpu.html
+++ b/application/flask_CPU/templates_cpu/index_cpu.html
@@ -14,7 +14,7 @@
 <br><br>
 
 <nav aria-label="Page navigation">
-  <ul class="pagination justify-content-center  pagination-lg">
+  <ul class="pagination justify-content-center">
     <li class="page-item disabled">
       <a class="page-link" href="#">Previous</a>
     </li>
