--- a/application/flask_CPU/templates_cpu/layout_cpu.html
+++ b/application/flask_CPU/templates_cpu/layout_cpu.html
@@ -19,7 +19,7 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container-fluid">
     <!-- ナビゲーションバー -->
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
       <a class="navbar-brand" href="{{url_for('cpu.index_view')}}">Flask CPU</a>
