--- a/application/flask_arduino/templates_arduino/index_arduino.html
+++ b/application/flask_arduino/templates_arduino/index_arduino.html
@@ -8,7 +8,7 @@
 <br><br>
 
 <nav aria-label="Page navigation">
-  <ul class="pagination justify-content-center  pagination-lg">
+  <ul class="pagination justify-content-center">
     <li class="page-item disabled">
       <a class="page-link" href="#">Previous</a>
     </li>
