--- a/application/flask_arduino/templates_arduino/index_arduino.html
+++ b/application/flask_arduino/templates_arduino/index_arduino.html
@@ -3,7 +3,7 @@
 {% block BODY %}
 <br><br>
 <div class="list-group">
-  <a class="list-group-item list-group-item-action" href="{{url_for('arduino.measure_view')}}">temp</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('arduino.measure_temp_view')}}">temp</a>
 </div>
 <br><br>
 
