--- a/application/flask_arduino/templates_arduino/measure_temp.html
+++ b/application/flask_arduino/templates_arduino/measure_temp.html
@@ -3,7 +3,7 @@
 {% block SCRIPT %}
 <script type="text/javascript">
   function jumpPage() {
-    location.href = "{{url_for('arduino.measure_view')}}";
+    location.href = "{{url_for('arduino.measure_temp_view')}}";
   }
   setTimeout("jumpPage()",2000)
 </script>
