--- a/application/flask_arduino/templates_arduino/layout_arduino.html
+++ b/application/flask_arduino/templates_arduino/layout_arduino.html
@@ -35,7 +35,7 @@
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
               <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
               <a class="dropdown-item" href="{{ url_for('arduino.index_view')}}">index</a>
-              <a class="dropdown-item" href="{{ url_for('arduino.measure_view')}}">temp</a>
+              <a class="dropdown-item" href="{{ url_for('arduino.measure_temp_view')}}">temp</a>
             </div>
           </li>
         </ul>
