--- a/application/flask_arduino/templates_arduino/index_arduino.html
+++ b/application/flask_arduino/templates_arduino/index_arduino.html
@@ -4,6 +4,8 @@
 <br><br>
 <div class="list-group">
   <a class="list-group-item list-group-item-action" href="{{url_for('arduino.measure_temp_view')}}">temp</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('arduino.blink_view')}}">blink</a>
+  <a class="list-group-item list-group-item-action" href="{{url_for('arduino.RGB_view')}}">RGB</a>
 </div>
 <br><br>
 
