--- a/application/flask_CPU/templates_cpu/index_cpu.html
+++ b/application/flask_CPU/templates_cpu/index_cpu.html
@@ -1,5 +1,9 @@
 {% extends "layout_cpu.html" %}
 
+{% block SCRIPT %}
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% endblock %}
+
 {% block BODY %}
 <br><br>
 <div class="list-group">
