--- a/application/flask_CPU/templates_cpu/layout_cpu.html
+++ b/application/flask_CPU/templates_cpu/layout_cpu.html
@@ -19,46 +19,72 @@
 </head>
 
 <body>
-  <div class="container-fluid">
-    <!-- ナビゲーションバー -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
-      <a class="navbar-brand" href="{{url_for('cpu.index_view')}}">Flask CPU</a>
-      <div class="collapse navbar-collapse justify-content-end">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link" href="https://github.com/kouki-0926" target="_blank">
-              <img src="static_cpu/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
-            </a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
-              <a class="dropdown-item" href="{{ url_for('cpu.index_view')}}">index</a>
-              <a class="dropdown-item" href="{{ url_for('cpu.measure_view',graph_type='temp')}}">CPU</a>
-              <a class="dropdown-item" href="{{ url_for('cpu.weather_view')}}">weather</a>
-              <a class="dropdown-item" href="{{ url_for('cpu.ip_address_view')}}">IP address</a>
-            </div>
-          </li>
-        </ul>
+  <div class="wrapper">
+    <div class="container-fluid">
+      <!-- ナビゲーションバー -->
+      <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+        <a class="navbar-brand" href="{{url_for('cpu.index_view')}}">Flask CPU</a>
+        <div class="collapse navbar-collapse justify-content-end">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="https://github.com/kouki-0926" target="_blank">
+                <img src="static_cpu/images/GitHub-Mark-64px.png" width="30" height="30" alt="GitHub">
+              </a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">MENU</a>
+              <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                <a class="dropdown-item" href="{{ url_for('main.index_view')}}">TopPage</a>
+                <a class="dropdown-item" href="{{ url_for('cpu.index_view')}}">index</a>
+                <a class="dropdown-item" href="{{ url_for('cpu.measure_view',graph_type='temp')}}">CPU</a>
+                <a class="dropdown-item" href="{{ url_for('cpu.weather_view')}}">weather</a>
+                <a class="dropdown-item" href="{{ url_for('cpu.ip_address_view')}}">IP address</a>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <!-- flash -->
+      {% for message in get_flashed_messages() %}
+      <div class="alert alert-danger alert-dismissible fade show" role="alert">
+        {{message}}
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
-    </nav>
+      {% endfor %}
+      <!--本文 -->
+      <div class="main_text">
+        {% block BODY %}
 
-    <!-- flash -->
-    {% for message in get_flashed_messages() %}
-    <div class="alert alert-danger alert-dismissible fade show" role="alert">
-      {{message}}
-      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
+        {% endblock %}
+      </div>
     </div>
-    {% endfor %}
-    <!--本文 -->
-    <div class="main_text">
-      {% block BODY %}
 
-      {% endblock %}
-    </div>
+    <!-- フッター -->
+    <footer class="footer">
+      <div class="center">
+        <a class="heading" href="{{ url_for('main.index_view')}}"><small>TopPage　</small></a>
+        <a class="heading" href="{{ url_for('cpu.index_view')}}"><small>index　</small></a>
+        <a class="heading" href="{{ url_for('cpu.measure_view',graph_type='temp')}}"><small>CPU　</small></a>
+        <a class="heading" href="{{ url_for('cpu.weather_view')}}"><small>weather　</small></a>
+        <a class="heading" href="{{ url_for('cpu.ip_address_view')}}"><small>IP_address　</small></a>
+      </div>
+    
+      <div class="center">
+        <small>&copy; 2020-<span id="thisYear"></span> Koki</small>
+        <script type="text/javascript">
+          date = new Date();
+          thisYear = date.getFullYear();
+          document.getElementById("thisYear").innerHTML = thisYear;
+        </script>
+        <a class="heading" href="https://github.com/kouki-0926/FlaskMathOnHeroku" target="_blank">
+          <img src="static_cpu/images/GitHub-Mark-64px.png" width="25" height="25" alt="GitHub">
+        </a>
+      </div>
+    </footer>
+
   </div>
 </body>
 
